--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
     "alertifyjs": "^1.11.2",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "firebase": "^5.7.1",
     "jquery": "^3.3.1",
+    "prop-types": "latest",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
